--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 
 title: The Berlin Robotics Meetup
-description: Meet Robotics Professionals and Enthusiast in a Informal Environment. Have Pizza. Bring Robots.
+description: Meet Robotics Professionals and Enthusiasts in an Informal Environment. Have Pizza. Bring Robots.
